# js-complexity-model

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  demo.py  docker_req.txt  examples.py  main.py  pyproject.toml  test.ipynb
.devcontainer/: Dockerfile  devcontainer.json
agents/: base_agent.py  ensemble_agent.py  evaluator.py  llm_agent.py  nn_agent.py  orchestrator.py
code_analyzer/: __init__.py  analyzer.py  astVisitors.js  bridge.js  environments.js  functionStore.js  index.js  package-lock.json  wrapper.js  wrapper.py
code_analyzer/handlers/: entryHandlers.js  exitHandlers.js  helpers.js
code_analyzer/src/: functionStore.js  handlerMap.js  index.js  node-types.js
llm_model/: README.md  complexity_llm.py  create-llm.ipynb  get_messages.py
nn_model/: README.md  complexity_nn.py  create-nn.ipynb  nn_service.py  normalise_features.py
nn_model/artifacts/: neural_network.pth  scaler.pkl  test_res.py
notebooks/: 01_dataset_load.ipynb  02_dataset_process.ipynb  03_evaluation.ipynb  04_traditional_ml.ipynb  05_main_models.ipynb  06_ft_dataset_gen.ipynb  07_fine_tuning.ipynb  08_ft_model_eval.ipynb  09_ensemble.ipynb
notebooks/utils/: evaluator.py  feature_extractor.py  fetch_api.py  get_complexity.py  preprocess_code.py
utils/: ansi_to_html.py  code_parser.py  complexity_llm.py  feature_extractor.py  get_label.py  get_messages.py  llm_utils.py  random_number.py  sanitize_code.py
