[project]
name = "js-complexity-model"
version = "0.1.0"
description = "A code complexity prediction model repo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "dotenv>=0.9.9",
    "gradio>=6.4.0",
    "huggingface-hub>=0.24.3",
    "ipykernel>=7.1.0",
    "lizard>=1.19.0",
    "matplotlib>=3.10.8",
    "modal>=1.3.0.post1",
    "nbformat>=5.10.4",
    "peft>=0.18.1",
    "plotly>=6.5.0",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "xgboost>=3.1.2",
]
